--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "reactstrap": "^8.0.0",
     "typescript": "3.4.4",
     "validator": "^10.11.0"
   },
@@ -29,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/reactstrap": "^8.0.1",
     "@types/validator": "^10.11.0"
   }
 }
